started to deal with more than 1 errorpath
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/counterexample-report@19139 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/Counterexample_Report/index_template.html
+++ b/Counterexample_Report/index_template.html
@@ -8,7 +8,7 @@
     <script type="text/javascript" src="jquery-1.11.3.min.js"></script>
     <script type="text/javascript" src="bootstrap-3.3.5-dist/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="angular.js"></script>
-    <script type ="text/javascript" src="app/app.js"></script>
+    <script type ="text/javascript" src="app/app0.js"></script>
     <script type="text/javascript" src="prettify.js"></script>
     <meta charset="UTF-8">
     <title>CPAchecker Report</title>
