deal with more than 1 sourcefile, scroll source to center
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/counterexample-report@19143 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/Counterexample_Report/index_template.html
+++ b/Counterexample_Report/index_template.html
@@ -117,9 +117,19 @@
                 </div>
             </div>
             <div class="fileContent" ng-show="report.tabIsSet(3)">
-		<table class="sourceContent">
-            <!--SOURCE-->
-		</table>
+                <div class="edit-line">
+                    <div class="dropdown">
+                        <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                            Displayed Sourcefile
+                            <span class="caret"></span>
+                        </button>
+                        <ul class="dropdown-menu">
+                            <li ng-repeat="file in report.sourceFiles"><a ng-click="report.setSourceFile($index)">{{file}}</a></li>
+                        </ul>
+                    </div>
+                    <label>{{report.sourceFiles[report.selectedSourceFile]}}</label>
+                </div>
+                <!--SOURCE-->
             </div>
             <div class="fileContent" ng-show="report.tabIsSet(4)">
                 <!--LOG-->
