--- a/Counterexample_Report/index_WithoutGraphs.html
+++ b/Counterexample_Report/index_WithoutGraphs.html
@@ -8,7 +8,7 @@
     <script type="text/javascript" src="jquery-1.11.3.min.js"></script>
     <script type="text/javascript" src="bootstrap-3.3.5-dist/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="angular.js"></script>
-    <script type ="text/javascript" src="app/app.js"></script>
+    <script type ="text/javascript" src="app/app0.js"></script>
     <script type="text/javascript" src="prettify.js"></script>
     <meta charset="UTF-8">
     <title>CPAchecker Report</title>
@@ -117,7 +117,19 @@
                 </div>
             </div>
             <div class="fileContent" ng-show="report.tabIsSet(3)">
-		<table class="sourceContent">
+                <div class="edit-line">
+                    <div class="dropdown">
+                        <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                            Displayed Sourcefile
+                            <span class="caret"></span>
+                        </button>
+                        <ul class="dropdown-menu">
+                            <li ng-repeat="file in report.sourceFiles"><a ng-click="report.setSourceFile($index)">{{file}}</a></li>
+                        </ul>
+                    </div>
+                    <label>{{report.sourceFiles[report.selectedSourceFile]}}</label>
+                </div>
+<table class="sourceContent" ng-show = "report.sourceFileIsSet(0)">
 <tr id="source-0"><td><pre>0</pre></td><td><pre class="prettyprint">extern void __VERIFIER_error() __attribute__ ((__noreturn__));</pre></td></tr>
 <tr id="source-1"><td><pre>1</pre></td><td><pre class="prettyprint"></pre></td></tr>
 <tr id="source-2"><td><pre>2</pre></td><td><pre class="prettyprint"></pre></td></tr>
@@ -957,7 +969,7 @@
 <tr id="source-836"><td><pre>836</pre></td><td><pre class="prettyprint">}</pre></td></tr>
 <tr id="source-837"><td><pre>837</pre></td><td><pre class="prettyprint">}</pre></td></tr>
 <tr id="source-838"><td><pre>838</pre></td><td><pre class="prettyprint"></pre></td></tr>
-		</table>
+</table>
             </div>
             <div class="fileContent" ng-show="report.tabIsSet(4)">
 <p>No Log-File available</p>            </div>
@@ -1001,21 +1013,21 @@
 <pre id="statistics-36"></pre>
 <pre id="statistics-37">Number of path formula cache hits:   100 (24%)</pre>
 <pre id="statistics-38"></pre>
-<pre id="statistics-39">Time for post operator:                  0.087s</pre>
-<pre id="statistics-40">  Time for path formula creation:        0.086s</pre>
-<pre id="statistics-41">    Actual computation:                  0.171s</pre>
-<pre id="statistics-42">Time for strengthen operator:            0.124s</pre>
-<pre id="statistics-43">  Time for satisfiability checks:        0.119s</pre>
-<pre id="statistics-44">Time for prec operator:                  0.055s</pre>
-<pre id="statistics-45">  Time for abstraction:                  0.051s (Max:     0.030s, Count: 6)</pre>
-<pre id="statistics-46">    Boolean abstraction:                 0.016s</pre>
-<pre id="statistics-47">    Solving time:                        0.011s (Max:     0.010s)</pre>
+<pre id="statistics-39">Time for post operator:                  0.126s</pre>
+<pre id="statistics-40">  Time for path formula creation:        0.124s</pre>
+<pre id="statistics-41">    Actual computation:                  0.210s</pre>
+<pre id="statistics-42">Time for strengthen operator:            0.132s</pre>
+<pre id="statistics-43">  Time for satisfiability checks:        0.130s</pre>
+<pre id="statistics-44">Time for prec operator:                  0.067s</pre>
+<pre id="statistics-45">  Time for abstraction:                  0.064s (Max:     0.033s, Count: 6)</pre>
+<pre id="statistics-46">    Boolean abstraction:                 0.017s</pre>
+<pre id="statistics-47">    Solving time:                        0.012s (Max:     0.011s)</pre>
 <pre id="statistics-48">    Model enumeration time:              0.000s</pre>
 <pre id="statistics-49">    Time for BDD construction:           0.000s (Max:     0.000s)</pre>
 <pre id="statistics-50">Time for merge operator:                 0.000s</pre>
-<pre id="statistics-51">Time for coverage check:                 0.004s</pre>
-<pre id="statistics-52">  Time for BDD entailment checks:        0.004s</pre>
-<pre id="statistics-53">Total time for SMT solver (w/o itp):     0.130s</pre>
+<pre id="statistics-51">Time for coverage check:                 0.005s</pre>
+<pre id="statistics-52">  Time for BDD entailment checks:        0.005s</pre>
+<pre id="statistics-53">Total time for SMT solver (w/o itp):     0.140s</pre>
 <pre id="statistics-54"></pre>
 <pre id="statistics-55">Number of BDD nodes:                               202</pre>
 <pre id="statistics-56">Size of BDD node table:                            55949</pre>
@@ -1033,21 +1045,21 @@
 <pre id="statistics-68">AutomatonAnalysis (AssertionAutomaton) statistics</pre>
 <pre id="statistics-69">-------------------------------------------------</pre>
 <pre id="statistics-70">Number of states:                                  1</pre>
-<pre id="statistics-71">Total time for successor computation:                  0.017s</pre>
+<pre id="statistics-71">Total time for successor computation:                  0.018s</pre>
 <pre id="statistics-72">Automaton transfers with branching:                0</pre>
 <pre id="statistics-73">Automaton transfer successors:                          763 (count: 763, min: 1, max: 1, avg: 1,00) [1 x 763]</pre>
 <pre id="statistics-74"></pre>
 <pre id="statistics-75">AutomatonAnalysis (ErrorLabelAutomaton) statistics</pre>
 <pre id="statistics-76">--------------------------------------------------</pre>
 <pre id="statistics-77">Number of states:                                  1</pre>
-<pre id="statistics-78">Total time for successor computation:                  0.011s</pre>
+<pre id="statistics-78">Total time for successor computation:                  0.012s</pre>
 <pre id="statistics-79">Automaton transfers with branching:                0</pre>
 <pre id="statistics-80">Automaton transfer successors:                          763 (count: 763, min: 1, max: 1, avg: 1,00) [1 x 763]</pre>
 <pre id="statistics-81"></pre>
 <pre id="statistics-82">AutomatonAnalysis (TerminatingFunctions) statistics</pre>
 <pre id="statistics-83">---------------------------------------------------</pre>
 <pre id="statistics-84">Number of states:                                  1</pre>
-<pre id="statistics-85">Total time for successor computation:                  0.009s</pre>
+<pre id="statistics-85">Total time for successor computation:                  0.014s</pre>
 <pre id="statistics-86">Automaton transfers with branching:                0</pre>
 <pre id="statistics-87">Automaton transfer successors:                          760 (count: 763, min: 0, max: 1, avg: 1,00) [0 x 3, 1 x 760]</pre>
 <pre id="statistics-88"></pre>
@@ -1062,31 +1074,31 @@
 <pre id="statistics-97">Number of times stopped:         3</pre>
 <pre id="statistics-98">Number of times breaked:         3</pre>
 <pre id="statistics-99"></pre>
-<pre id="statistics-100">Total time for CPA algorithm:         0.378s (Max:     0.213s)</pre>
-<pre id="statistics-101">  Time for choose from waitlist:      0.002s</pre>
-<pre id="statistics-102">  Time for precision adjustment:      0.061s</pre>
-<pre id="statistics-103">  Time for transfer relation:         0.294s</pre>
-<pre id="statistics-104">  Time for merge operator:            0.000s</pre>
-<pre id="statistics-105">  Time for stop operator:             0.006s</pre>
-<pre id="statistics-106">  Time for adding to reached set:     0.007s</pre>
+<pre id="statistics-100">Total time for CPA algorithm:         0.463s (Max:     0.280s)</pre>
+<pre id="statistics-101">  Time for choose from waitlist:      0.001s</pre>
+<pre id="statistics-102">  Time for precision adjustment:      0.080s</pre>
+<pre id="statistics-103">  Time for transfer relation:         0.355s</pre>
+<pre id="statistics-104">  Time for merge operator:            0.001s</pre>
+<pre id="statistics-105">  Time for stop operator:             0.007s</pre>
+<pre id="statistics-106">  Time for adding to reached set:     0.010s</pre>
 <pre id="statistics-107"></pre>
 <pre id="statistics-108">Predicate-Abstraction Refiner statistics</pre>
 <pre id="statistics-109">----------------------------------------</pre>
 <pre id="statistics-110">Avg. length of target path (in blocks):                   6 (count: 3, min: 2, max: 2, avg: 2,00)</pre>
 <pre id="statistics-111">Number of infeasible sliced prefixes:                     0 (count: 0, min: 0, max: 0, avg: 0,00)</pre>
 <pre id="statistics-112"></pre>
-<pre id="statistics-113">Time for refinement:                                   0.343s</pre>
-<pre id="statistics-114">  Counterexample analysis:                0.101s (Max:     0.047s, Calls: 3)</pre>
-<pre id="statistics-115">    Refinement sat check:                 0.054s</pre>
+<pre id="statistics-113">Time for refinement:                                   0.365s</pre>
+<pre id="statistics-114">  Counterexample analysis:                0.107s (Max:     0.049s, Calls: 3)</pre>
+<pre id="statistics-115">    Refinement sat check:                 0.060s</pre>
 <pre id="statistics-116">    Interpolant computation:              0.000s</pre>
 <pre id="statistics-117">  Error path post-processing:                          0.000s</pre>
-<pre id="statistics-118">  Path-formulas extraction:                            0.000s</pre>
-<pre id="statistics-119">  Building the counterexample trace:                   0.101s</pre>
-<pre id="statistics-120">  Extracting precise counterexample:                   0.205s</pre>
+<pre id="statistics-118">  Path-formulas extraction:                            0.001s</pre>
+<pre id="statistics-119">  Building the counterexample trace:                   0.107s</pre>
+<pre id="statistics-120">  Extracting precise counterexample:                   0.217s</pre>
 <pre id="statistics-121">  Extracting infeasible sliced prefixes:               0.000s</pre>
 <pre id="statistics-122">  Selecting infeasible sliced prefixes:                0.000s</pre>
-<pre id="statistics-123">  Predicate creation:                                  0.000s</pre>
-<pre id="statistics-124">  Precision update:                                    0.002s</pre>
+<pre id="statistics-123">  Predicate creation:                                  0.001s</pre>
+<pre id="statistics-124">  Precision update:                                    0.003s</pre>
 <pre id="statistics-125">  ARG update:                                          0.004s</pre>
 <pre id="statistics-126"></pre>
 <pre id="statistics-127">Length of refined path (in blocks):                       2 (count: 1, min: 2, max: 2, avg: 2,00)</pre>
@@ -1110,16 +1122,16 @@
 <pre id="statistics-145">Avg. size of reached set before ref.: 51.00</pre>
 <pre id="statistics-146">Avg. size of reached set after ref.:  3.00</pre>
 <pre id="statistics-147"></pre>
-<pre id="statistics-148">Total time for CEGAR algorithm:       0.732s</pre>
-<pre id="statistics-149">Time for refinements:                 0.354s</pre>
-<pre id="statistics-150">Average time for refinement:          0.118s</pre>
-<pre id="statistics-151">Max time for refinement:              0.256s</pre>
+<pre id="statistics-148">Total time for CEGAR algorithm:       0.840s</pre>
+<pre id="statistics-149">Time for refinements:                 0.376s</pre>
+<pre id="statistics-150">Average time for refinement:          0.125s</pre>
+<pre id="statistics-151">Max time for refinement:              0.270s</pre>
 <pre id="statistics-152"></pre>
 <pre id="statistics-153">Counterexample-Check Algorithm statistics</pre>
 <pre id="statistics-154">-----------------------------------------</pre>
 <pre id="statistics-155">Number of counterexample checks:    1</pre>
 <pre id="statistics-156">Number of infeasible paths:         0 (0%)</pre>
-<pre id="statistics-157">Time for counterexample checks:         0.384s</pre>
+<pre id="statistics-157">Time for counterexample checks:         0.508s</pre>
 <pre id="statistics-158"></pre>
 <pre id="statistics-159">Code Coverage</pre>
 <pre id="statistics-160">-----------------------------</pre>
@@ -1149,29 +1161,29 @@
 <pre id="statistics-184">  Number of target states:       1</pre>
 <pre id="statistics-185">  Size of final wait list        2</pre>
 <pre id="statistics-186"></pre>
-<pre id="statistics-187">Time for analysis setup:          2.592s</pre>
-<pre id="statistics-188">  Time for loading CPAs:          0.839s</pre>
-<pre id="statistics-189">  Time for loading parser:        0.694s</pre>
-<pre id="statistics-190">  Time for CFA construction:      0.980s</pre>
-<pre id="statistics-191">    Time for parsing file(s):     0.406s</pre>
-<pre id="statistics-192">    Time for AST to CFA:          0.229s</pre>
-<pre id="statistics-193">    Time for CFA sanity check:    0.042s</pre>
-<pre id="statistics-194">    Time for post-processing:     0.200s</pre>
+<pre id="statistics-187">Time for analysis setup:          2.896s</pre>
+<pre id="statistics-188">  Time for loading CPAs:          0.964s</pre>
+<pre id="statistics-189">  Time for loading parser:        0.741s</pre>
+<pre id="statistics-190">  Time for CFA construction:      1.091s</pre>
+<pre id="statistics-191">    Time for parsing file(s):     0.457s</pre>
+<pre id="statistics-192">    Time for AST to CFA:          0.263s</pre>
+<pre id="statistics-193">    Time for CFA sanity check:    0.055s</pre>
+<pre id="statistics-194">    Time for post-processing:     0.226s</pre>
 <pre id="statistics-195">      Time for var class.:        0.000s</pre>
-<pre id="statistics-196">    Time for CFA export:          0.519s</pre>
-<pre id="statistics-197">Time for Analysis:                1.117s</pre>
-<pre id="statistics-198">CPU time for analysis:            2.130s</pre>
-<pre id="statistics-199">Total time for CPAchecker:        3.722s</pre>
-<pre id="statistics-200">Total CPU time for CPAchecker:    8.340s</pre>
+<pre id="statistics-196">    Time for CFA export:          0.596s</pre>
+<pre id="statistics-197">Time for Analysis:                1.349s</pre>
+<pre id="statistics-198">CPU time for analysis:            2.570s</pre>
+<pre id="statistics-199">Total time for CPAchecker:        4.258s</pre>
+<pre id="statistics-200">Total CPU time for CPAchecker:    8.840s</pre>
 <pre id="statistics-201"></pre>
-<pre id="statistics-202">Time for Garbage Collector:       0.059s (in 5 runs)</pre>
+<pre id="statistics-202">Time for Garbage Collector:       0.068s (in 6 runs)</pre>
 <pre id="statistics-203">Garbage Collector(s) used:    PS MarkSweep, PS Scavenge</pre>
-<pre id="statistics-204">Used heap memory:                 80MB (    77 MiB) max;     36MB (    35 MiB) avg;     90MB (    86 MiB) peak</pre>
+<pre id="statistics-204">Used heap memory:                 52MB (    50 MiB) max;     26MB (    24 MiB) avg;     60MB (    57 MiB) peak</pre>
 <pre id="statistics-205">Used non-heap memory:             23MB (    22 MiB) max;     16MB (    15 MiB) avg;     23MB (    22 MiB) peak</pre>
-<pre id="statistics-206">Used in PS Old Gen pool:          16MB (    15 MiB) max;      9MB (     9 MiB) avg;     23MB (    22 MiB) peak</pre>
-<pre id="statistics-207">Allocated heap memory:           107MB (   102 MiB) max;     86MB (    82 MiB) avg</pre>
+<pre id="statistics-206">Used in PS Old Gen pool:          16MB (    16 MiB) max;     10MB (     9 MiB) avg;     16MB (    16 MiB) peak</pre>
+<pre id="statistics-207">Allocated heap memory:           114MB (   109 MiB) max;     80MB (    77 MiB) avg</pre>
 <pre id="statistics-208">Allocated non-heap memory:        24MB (    23 MiB) max;     24MB (    23 MiB) avg</pre>
-<pre id="statistics-209">Total process virtual memory:   2741MB (  2614 MiB) max;   2711MB (  2585 MiB) avg</pre>
+<pre id="statistics-209">Total process virtual memory:   2741MB (  2614 MiB) max;   2711MB (  2586 MiB) avg</pre>
             </div>
             <div class="fileContent" ng-show="report.tabIsSet(6)">
 <pre id="config-0">analysis.algorithm.CEGAR = true</pre>
