revised right help text (added explanation for nodes in cfa and colour ins arg)
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/counterexample-report@19156 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/Counterexample_Report/index_WithoutGraphs.html
+++ b/Counterexample_Report/index_WithoutGraphs.html
@@ -47,8 +47,8 @@
                     Find only exact matches</label>
             </div>
             <div id="matches">
-                <p class="markedValues">Matches in 'values': {{report.numOfValueMatches}}</p>
-                <p class="markedDescriptions">Matches in 'description': {{report.numOfDescriptionMatches}}</p>
+                <p class="markedValues">Matches in 'value-assignements': {{report.numOfValueMatches}}</p>
+                <p class="markedDescriptions">Matches in 'edge-description': {{report.numOfDescriptionMatches}}</p>
             </div>
         </header>
         <div class="fileContent">
@@ -1013,21 +1013,21 @@
 <pre id="statistics-36"></pre>
 <pre id="statistics-37">Number of path formula cache hits:   100 (24%)</pre>
 <pre id="statistics-38"></pre>
-<pre id="statistics-39">Time for post operator:                  0.086s</pre>
-<pre id="statistics-40">  Time for path formula creation:        0.083s</pre>
-<pre id="statistics-41">    Actual computation:                  0.154s</pre>
-<pre id="statistics-42">Time for strengthen operator:            0.112s</pre>
-<pre id="statistics-43">  Time for satisfiability checks:        0.109s</pre>
-<pre id="statistics-44">Time for prec operator:                  0.054s</pre>
-<pre id="statistics-45">  Time for abstraction:                  0.052s (Max:     0.031s, Count: 6)</pre>
-<pre id="statistics-46">    Boolean abstraction:                 0.016s</pre>
+<pre id="statistics-39">Time for post operator:                  0.111s</pre>
+<pre id="statistics-40">  Time for path formula creation:        0.109s</pre>
+<pre id="statistics-41">    Actual computation:                  0.190s</pre>
+<pre id="statistics-42">Time for strengthen operator:            0.119s</pre>
+<pre id="statistics-43">  Time for satisfiability checks:        0.117s</pre>
+<pre id="statistics-44">Time for prec operator:                  0.060s</pre>
+<pre id="statistics-45">  Time for abstraction:                  0.056s (Max:     0.029s, Count: 6)</pre>
+<pre id="statistics-46">    Boolean abstraction:                 0.017s</pre>
 <pre id="statistics-47">    Solving time:                        0.012s (Max:     0.010s)</pre>
 <pre id="statistics-48">    Model enumeration time:              0.000s</pre>
 <pre id="statistics-49">    Time for BDD construction:           0.000s (Max:     0.000s)</pre>
 <pre id="statistics-50">Time for merge operator:                 0.000s</pre>
-<pre id="statistics-51">Time for coverage check:                 0.004s</pre>
-<pre id="statistics-52">  Time for BDD entailment checks:        0.004s</pre>
-<pre id="statistics-53">Total time for SMT solver (w/o itp):     0.120s</pre>
+<pre id="statistics-51">Time for coverage check:                 0.005s</pre>
+<pre id="statistics-52">  Time for BDD entailment checks:        0.005s</pre>
+<pre id="statistics-53">Total time for SMT solver (w/o itp):     0.127s</pre>
 <pre id="statistics-54"></pre>
 <pre id="statistics-55">Number of BDD nodes:                               202</pre>
 <pre id="statistics-56">Size of BDD node table:                            55949</pre>
@@ -1045,21 +1045,21 @@
 <pre id="statistics-68">AutomatonAnalysis (AssertionAutomaton) statistics</pre>
 <pre id="statistics-69">-------------------------------------------------</pre>
 <pre id="statistics-70">Number of states:                                  1</pre>
-<pre id="statistics-71">Total time for successor computation:                  0.015s</pre>
+<pre id="statistics-71">Total time for successor computation:                  0.021s</pre>
 <pre id="statistics-72">Automaton transfers with branching:                0</pre>
 <pre id="statistics-73">Automaton transfer successors:                          763 (count: 763, min: 1, max: 1, avg: 1,00) [1 x 763]</pre>
 <pre id="statistics-74"></pre>
 <pre id="statistics-75">AutomatonAnalysis (ErrorLabelAutomaton) statistics</pre>
 <pre id="statistics-76">--------------------------------------------------</pre>
 <pre id="statistics-77">Number of states:                                  1</pre>
-<pre id="statistics-78">Total time for successor computation:                  0.006s</pre>
+<pre id="statistics-78">Total time for successor computation:                  0.010s</pre>
 <pre id="statistics-79">Automaton transfers with branching:                0</pre>
 <pre id="statistics-80">Automaton transfer successors:                          763 (count: 763, min: 1, max: 1, avg: 1,00) [1 x 763]</pre>
 <pre id="statistics-81"></pre>
 <pre id="statistics-82">AutomatonAnalysis (TerminatingFunctions) statistics</pre>
 <pre id="statistics-83">---------------------------------------------------</pre>
 <pre id="statistics-84">Number of states:                                  1</pre>
-<pre id="statistics-85">Total time for successor computation:                  0.008s</pre>
+<pre id="statistics-85">Total time for successor computation:                  0.013s</pre>
 <pre id="statistics-86">Automaton transfers with branching:                0</pre>
 <pre id="statistics-87">Automaton transfer successors:                          760 (count: 763, min: 0, max: 1, avg: 1,00) [0 x 3, 1 x 760]</pre>
 <pre id="statistics-88"></pre>
@@ -1074,12 +1074,12 @@
 <pre id="statistics-97">Number of times stopped:         3</pre>
 <pre id="statistics-98">Number of times breaked:         3</pre>
 <pre id="statistics-99"></pre>
-<pre id="statistics-100">Total time for CPA algorithm:         0.364s (Max:     0.207s)</pre>
-<pre id="statistics-101">  Time for choose from waitlist:      0.002s</pre>
-<pre id="statistics-102">  Time for precision adjustment:      0.067s</pre>
-<pre id="statistics-103">  Time for transfer relation:         0.281s</pre>
+<pre id="statistics-100">Total time for CPA algorithm:         0.411s (Max:     0.246s)</pre>
+<pre id="statistics-101">  Time for choose from waitlist:      0.001s</pre>
+<pre id="statistics-102">  Time for precision adjustment:      0.073s</pre>
+<pre id="statistics-103">  Time for transfer relation:         0.314s</pre>
 <pre id="statistics-104">  Time for merge operator:            0.001s</pre>
-<pre id="statistics-105">  Time for stop operator:             0.004s</pre>
+<pre id="statistics-105">  Time for stop operator:             0.009s</pre>
 <pre id="statistics-106">  Time for adding to reached set:     0.005s</pre>
 <pre id="statistics-107"></pre>
 <pre id="statistics-108">Predicate-Abstraction Refiner statistics</pre>
@@ -1087,19 +1087,19 @@
 <pre id="statistics-110">Avg. length of target path (in blocks):                   6 (count: 3, min: 2, max: 2, avg: 2,00)</pre>
 <pre id="statistics-111">Number of infeasible sliced prefixes:                     0 (count: 0, min: 0, max: 0, avg: 0,00)</pre>
 <pre id="statistics-112"></pre>
-<pre id="statistics-113">Time for refinement:                                   0.323s</pre>
-<pre id="statistics-114">  Counterexample analysis:                0.100s (Max:     0.047s, Calls: 3)</pre>
-<pre id="statistics-115">    Refinement sat check:                 0.056s</pre>
+<pre id="statistics-113">Time for refinement:                                   0.354s</pre>
+<pre id="statistics-114">  Counterexample analysis:                0.104s (Max:     0.048s, Calls: 3)</pre>
+<pre id="statistics-115">    Refinement sat check:                 0.054s</pre>
 <pre id="statistics-116">    Interpolant computation:              0.000s</pre>
 <pre id="statistics-117">  Error path post-processing:                          0.000s</pre>
 <pre id="statistics-118">  Path-formulas extraction:                            0.000s</pre>
-<pre id="statistics-119">  Building the counterexample trace:                   0.100s</pre>
-<pre id="statistics-120">  Extracting precise counterexample:                   0.188s</pre>
+<pre id="statistics-119">  Building the counterexample trace:                   0.104s</pre>
+<pre id="statistics-120">  Extracting precise counterexample:                   0.210s</pre>
 <pre id="statistics-121">  Extracting infeasible sliced prefixes:               0.000s</pre>
 <pre id="statistics-122">  Selecting infeasible sliced prefixes:                0.000s</pre>
 <pre id="statistics-123">  Predicate creation:                                  0.001s</pre>
-<pre id="statistics-124">  Precision update:                                    0.002s</pre>
-<pre id="statistics-125">  ARG update:                                          0.004s</pre>
+<pre id="statistics-124">  Precision update:                                    0.003s</pre>
+<pre id="statistics-125">  ARG update:                                          0.003s</pre>
 <pre id="statistics-126"></pre>
 <pre id="statistics-127">Length of refined path (in blocks):                       2 (count: 1, min: 2, max: 2, avg: 2,00)</pre>
 <pre id="statistics-128">Number of affected states:                                1 (count: 1, min: 1, max: 1, avg: 1,00)</pre>
@@ -1122,16 +1122,16 @@
 <pre id="statistics-145">Avg. size of reached set before ref.: 51.00</pre>
 <pre id="statistics-146">Avg. size of reached set after ref.:  3.00</pre>
 <pre id="statistics-147"></pre>
-<pre id="statistics-148">Total time for CEGAR algorithm:       0.698s</pre>
-<pre id="statistics-149">Time for refinements:                 0.334s</pre>
-<pre id="statistics-150">Average time for refinement:          0.111s</pre>
-<pre id="statistics-151">Max time for refinement:              0.238s</pre>
+<pre id="statistics-148">Total time for CEGAR algorithm:       0.780s</pre>
+<pre id="statistics-149">Time for refinements:                 0.369s</pre>
+<pre id="statistics-150">Average time for refinement:          0.123s</pre>
+<pre id="statistics-151">Max time for refinement:              0.262s</pre>
 <pre id="statistics-152"></pre>
 <pre id="statistics-153">Counterexample-Check Algorithm statistics</pre>
 <pre id="statistics-154">-----------------------------------------</pre>
 <pre id="statistics-155">Number of counterexample checks:    1</pre>
 <pre id="statistics-156">Number of infeasible paths:         0 (0%)</pre>
-<pre id="statistics-157">Time for counterexample checks:         0.395s</pre>
+<pre id="statistics-157">Time for counterexample checks:         0.458s</pre>
 <pre id="statistics-158"></pre>
 <pre id="statistics-159">Code Coverage</pre>
 <pre id="statistics-160">-----------------------------</pre>
@@ -1161,29 +1161,29 @@
 <pre id="statistics-184">  Number of target states:       1</pre>
 <pre id="statistics-185">  Size of final wait list        2</pre>
 <pre id="statistics-186"></pre>
-<pre id="statistics-187">Time for analysis setup:          2.502s</pre>
-<pre id="statistics-188">  Time for loading CPAs:          0.798s</pre>
-<pre id="statistics-189">  Time for loading parser:        0.683s</pre>
-<pre id="statistics-190">  Time for CFA construction:      0.944s</pre>
-<pre id="statistics-191">    Time for parsing file(s):     0.378s</pre>
-<pre id="statistics-192">    Time for AST to CFA:          0.230s</pre>
-<pre id="statistics-193">    Time for CFA sanity check:    0.041s</pre>
-<pre id="statistics-194">    Time for post-processing:     0.212s</pre>
+<pre id="statistics-187">Time for analysis setup:          3.032s</pre>
+<pre id="statistics-188">  Time for loading CPAs:          1.139s</pre>
+<pre id="statistics-189">  Time for loading parser:        0.656s</pre>
+<pre id="statistics-190">  Time for CFA construction:      1.115s</pre>
+<pre id="statistics-191">    Time for parsing file(s):     0.416s</pre>
+<pre id="statistics-192">    Time for AST to CFA:          0.320s</pre>
+<pre id="statistics-193">    Time for CFA sanity check:    0.081s</pre>
+<pre id="statistics-194">    Time for post-processing:     0.225s</pre>
 <pre id="statistics-195">      Time for var class.:        0.000s</pre>
-<pre id="statistics-196">    Time for CFA export:          0.521s</pre>
-<pre id="statistics-197">Time for Analysis:                1.094s</pre>
-<pre id="statistics-198">CPU time for analysis:            2.040s</pre>
-<pre id="statistics-199">Total time for CPAchecker:        3.611s</pre>
-<pre id="statistics-200">Total CPU time for CPAchecker:    8.110s</pre>
+<pre id="statistics-196">    Time for CFA export:          0.708s</pre>
+<pre id="statistics-197">Time for Analysis:                1.239s</pre>
+<pre id="statistics-198">CPU time for analysis:            2.090s</pre>
+<pre id="statistics-199">Total time for CPAchecker:        4.288s</pre>
+<pre id="statistics-200">Total CPU time for CPAchecker:    9.030s</pre>
 <pre id="statistics-201"></pre>
-<pre id="statistics-202">Time for Garbage Collector:       0.070s (in 5 runs)</pre>
+<pre id="statistics-202">Time for Garbage Collector:       0.253s (in 5 runs)</pre>
 <pre id="statistics-203">Garbage Collector(s) used:    PS MarkSweep, PS Scavenge</pre>
-<pre id="statistics-204">Used heap memory:                 74MB (    71 MiB) max;     34MB (    32 MiB) avg;     87MB (    83 MiB) peak</pre>
-<pre id="statistics-205">Used non-heap memory:             23MB (    21 MiB) max;     16MB (    15 MiB) avg;     23MB (    22 MiB) peak</pre>
-<pre id="statistics-206">Used in PS Old Gen pool:          14MB (    13 MiB) max;      8MB (     7 MiB) avg;     20MB (    19 MiB) peak</pre>
-<pre id="statistics-207">Allocated heap memory:           107MB (   102 MiB) max;     86MB (    82 MiB) avg</pre>
+<pre id="statistics-204">Used heap memory:                 80MB (    76 MiB) max;     36MB (    35 MiB) avg;     91MB (    86 MiB) peak</pre>
+<pre id="statistics-205">Used non-heap memory:             23MB (    22 MiB) max;     16MB (    15 MiB) avg;     23MB (    22 MiB) peak</pre>
+<pre id="statistics-206">Used in PS Old Gen pool:          17MB (    16 MiB) max;     10MB (     9 MiB) avg;     24MB (    22 MiB) peak</pre>
+<pre id="statistics-207">Allocated heap memory:           107MB (   102 MiB) max;     88MB (    84 MiB) avg</pre>
 <pre id="statistics-208">Allocated non-heap memory:        24MB (    23 MiB) max;     24MB (    23 MiB) avg</pre>
-<pre id="statistics-209">Total process virtual memory:   2741MB (  2614 MiB) max;   2709MB (  2584 MiB) avg</pre>
+<pre id="statistics-209">Total process virtual memory:   2744MB (  2617 MiB) max;   2711MB (  2585 MiB) avg</pre>
             </div>
             <div class="fileContent" ng-show="report.tabIsSet(6)">
 <pre id="config-0">analysis.algorithm.CEGAR = true</pre>
