--- a/Counterexample_Report/index_template.html
+++ b/Counterexample_Report/index_template.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html ng-app='report'>
 <head>
-    <link rel="stylesheet" type="text/css" href="bootstrap-3.3.5-dist/css/bootstrap.min.css"/>
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
     <link href="app/generic.css" rel="stylesheet" type="text/css">
-    <link href="prettify.css" rel="stylesheet" type="text/css">
+    <link href="http://google-code-prettify.googlecode.com/svn/trunk/src/prettify.css" rel="stylesheet" type="text/css">
     <!--the jquery-script is necessary for bootstrap, it has to be added BEFORE the bootstrap-script-->
-    <script type="text/javascript" src="jquery-1.11.3.min.js"></script>
-    <script type="text/javascript" src="bootstrap-3.3.5-dist/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="angular.js"></script>
-    <script type ="text/javascript" src="app/app.js"></script><!--SCRIPT-->
-    <script type="text/javascript" src="prettify.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+    <script type ="text/javascript" src="app/app0.js"></script>
+    <script type="text/javascript" src="http://google-code-prettify.googlecode.com/svn/trunk/src/prettify.js"></script>
     <meta charset="UTF-8">
     <title>CPAchecker Report</title>
 </head>
@@ -47,8 +47,8 @@
                     Find only exact matches</label>
             </div>
             <div id="matches">
-                <p class="markedValues">Matches in 'value-assignements': {{report.numOfValueMatches}}</p>
-                <p class="markedDescriptions">Matches in 'edge-description': {{report.numOfDescriptionMatches}}</p>
+                <p class="markedValues">Matches in value-assignements (V): {{report.numOfValueMatches}}</p>
+                <p class="markedDescriptions">Matches in edge-description: {{report.numOfDescriptionMatches}}</p>
             </div>
         </header>
         <div class="fileContent">
